fixed blockquote align

--- a/articles/lujain/lujain-styles.css
+++ b/articles/lujain/lujain-styles.css
@@ -165,7 +165,7 @@ blockquote {
     border-left-width: 4px;
     border-left-color: #ff2238;
     padding: 15px !important;
-    text-align:justify;
+    text-align:left !important;
     margin-left: 2.5rem;
     margin-right: 2.5rem;
     font-size: 1rem;
